# prof-backend

./: .gitignore  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
core/: admin.py  context_proc.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_article_image.py  0003_contactinfo_remove_article_image.py  0004_section_description.py  0005_remove_article_content_article_text.py
core/templates/: base.html  path.html
faculty_site/: asgi.py  settings.py  urls.py  wsgi.py
my_site/: db.sqlite3
my_site/content/static/ckeditor/ckeditor/skins/moono_blue/: editor.css  editor_ie.css
my_site/content/static/css/Includes/: footer.scss  header.scss  index.css  index.css.map  index.scss
my_site/content/static/css/MainPage/: main_page.css  main_page.css.map  main_page.scss
my_site/content/static/js/MainPage/: main_page.js
my_site/core/: admin.py  models.py  urls.py  views.py
my_site/core/migrations/: 0001_initial.py
my_site/core/templates/: base.html
my_site/core/templates/Includes/: footer.html  header.html  index.html
my_site/core/templates/MainPage/: main_page.html
my_site/my_site/: settings.py  urls.py
